--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -6,5 +6,5 @@
     "outDir": ".next/production-server/"
   },
   "include": ["**/*.ts"],
-  "exclude": ["test/**/*.ts"]
+  // "exclude": ["test/**/*.ts"]
 }
