--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "tcpServer.js",
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
     "axios": "^0.21.1",
     "bson": "^4.2.2",
     "express": "^4.17.1",
@@ -11,7 +13,8 @@
     "net": "^1.0.2",
     "next": "^10.0.7",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-json-tree": "^0.13.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
@@ -26,7 +29,7 @@
     "dev": "nodemon server/server.ts",
     "build": "next build && tsc --project tsconfig.server.json",
     "postinstall": "npm run build",
-    "start": "node .next/production-server/server.js"
+    "start": "node .next/production-server/server/server.js"
   },
   "keywords": [],
   "author": "matsdekort <matsdekort257@gmail.com>",
