--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.21.1",
     "bson": "^4.2.2",
     "express": "^4.17.1",
+    "filesize": "^6.1.0",
     "nanoid": "^3.1.20",
     "net": "^1.0.2",
     "next": "^10.0.7",
