--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "axios": "^0.21.1",
+    "body-parser": "^1.19.0",
     "bson": "^4.2.2",
     "express": "^4.17.1",
     "filesize": "^6.1.0",
