--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "net": "^1.0.2",
     "next": "^10.0.7",
     "react": "^17.0.1",
+    "react-confirm-alert": "^2.7.0",
     "react-dom": "^17.0.1",
     "react-json-tree": "^0.13.0"
   },
