--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "bson": "^4.2.2",
+    "codemirror": "^5.59.4",
     "express": "^4.17.1",
     "filesize": "^6.1.0",
     "nanoid": "^3.1.20",
     "net": "^1.0.2",
     "next": "^10.0.7",
     "react": "^17.0.1",
+    "react-codemirror": "^1.0.0",
+    "react-codemirror2": "^7.2.1",
     "react-confirm-alert": "^2.7.0",
     "react-dom": "^17.0.1",
     "react-json-tree": "^0.13.0"
