--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "bson": "^4.2.2",
+    "child_process": "^1.0.2",
     "codemirror": "^5.59.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "filesize": "^6.1.0",
+    "id": "0.0.0",
     "ip": "^1.1.5",
     "nanoid": "^3.1.20",
     "net": "^1.0.2",
