--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "bson": "^4.2.2",
+    "chart.js": "^2.9.4",
     "child_process": "^1.0.2",
     "codemirror": "^5.59.4",
     "cors": "^2.8.5",
@@ -20,7 +21,7 @@
     "net": "^1.0.2",
     "next": "^10.0.7",
     "react": "^17.0.1",
-    "react-codemirror": "^1.0.0",
+    "react-chartjs-2": "^2.11.1",
     "react-codemirror2": "^7.2.1",
     "react-confirm-alert": "^2.7.0",
     "react-dom": "^17.0.1",
