--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "filesize": "^6.1.0",
     "id": "0.0.0",
     "ip": "^1.1.5",
+    "js-beautify": "^1.13.5",
     "nanoid": "^3.1.20",
     "net": "^1.0.2",
     "next": "^10.0.7",
